[cucumber-java] apply quick-fixes from inspection "SequencedCollection method can be used"
GitOrigin-RevId: e27ecc6a8dd622f063ebce0c552a1fdbe2faa266