@@ -98,7 +98,7 @@ public final class CucumberJavaVersionUtil {
       }
     }
 
-    String theLatestVersion = VERSION_CLASS_MARKERS.get(VERSION_CLASS_MARKERS.size() - 1).second;
+    String theLatestVersion = VERSION_CLASS_MARKERS.getLast().second;
     LOG.debug("Can't detect cucumber-core version by marker class, assume the latest version: " + theLatestVersion);
 
     return theLatestVersion;
